fix layout shift in work experience section

--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,8 @@
 iconify-icon {
   width: 1.5em;
   height: 1.5em;
+  /* not sure why but this line fixes layout shifting in the work experience section but only for overflowing text */
+  aspect-ratio: 1 / 1; 
 }
 
 iconify-icon svg {
